--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,14 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <%= render "shared/nav", location: 'top'%>
+    <%= render "shared/nav", location: 'top' %>
 
-  <%= login_helper%>
+    <%= login_helper %>
 
     <%= yield %>
 
-  <%= source_helper("application")%>
+    <%= copyright_generator %>
+
+    <%= source_helper("application") %>
   </body>
 </html>
