--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,13 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+   <div class="site-wrapper">
 
-    <%= render "shared/nav", location: 'top' %>
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+    <%= render "shared/application_nav" %>
 
     <%= login_helper %>
 
@@ -25,5 +28,10 @@
     <%= copyright_generator %>
 
     <%= source_helper("application") %>
+         </div>
+
+      </div>
+
+    </div>
   </body>
 </html>
