Updated styles and added map for contact page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>About Me</h1>
+<p>I am a fresh graduate from high school and most of my highschool years have been devoted to coding, I have loved it
+ever since I was introduced to it. It is a world of my creation, all I need are the learnable skills, a computer, 
+and lastly an internet connecion. It is almost pure magic. My skills are conveyed in this portfolio, I hope my work
+contains no imperfections.</p>
