--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,38 @@
-<h1>Pages#contact</h1>
+<h1>Would you like to work together?</h1>
 
-<p><%= number_to_phone "5555555555"%></p>
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Office Address</h3>
+
+    <p>Ben Lomond High School, 9th Street, Ogden, UT</p>
+
+    <h3>Phone</h3>
+
+    <p><%= number_to_phone "4355555555" %></p>
+
+    <h3>Email</h3>
+
+    <p><a href="mailto:jeanbricker101@gmail.com?subject=PortfolioContact" "email me">Email me</a> </p>
+  </div>
+  <!--The email link does not work.I removed Jordan's email and replaced it with mine, not working. His email doesn't work
+  either.-->
+
+  <div class="col-md-6">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2999.7336464299333!2d-111.95328978417393!3d41.
+24935947927701!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8753094d6cc1c84b%3A0x9f10345ac54f6642!2sBen+
+Lomond+High+School!5e0!3m2!1sen!2sus!4v1501601405940" width="600" height="450" frameborder="0" style="border:0" 
+allowfullscreen></iframe>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
