--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
@@ -13,45 +13,33 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-<!--  Start of nav -->
   <body>
-     <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
-    <!-- End of nav -->
-    
-   <!-- Start of blog header -->
-       <div class="blog-header">
+
+    <%= render 'shared/blog_nav' %>
+
+    <!-- start of blog header -->
+    <div class="blog-header">
       <div class="container">
         <h1 class="blog-title">The Bootstrap Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
       </div>
     </div>
-    <!-- End of blog header -->
-    
-    <!-- Start of container and row elements -->
+    <!-- end of blog header -->
+
+    <!-- start of container and row element -->
     <div class="container">
 
       <div class="row">
-    <!-- End of container and row elements -->
-        
-        <%= login_helper%>
-    
-        <!-- Start of sidebar -->
+    <!-- start of container and row element -->
+ 
         <%= yield %>
-        
+
+        <!-- start of sidebar -->
         <div class="col-sm-3 offset-sm-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
             <h4>About</h4>
-            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. 
+            Aenean lacinia bibendum nulla sed consectetur.</p>
           </div>
           <div class="sidebar-module">
             <h4>Archives</h4>
@@ -78,22 +66,23 @@
               <li><a href="#">Facebook</a></li>
             </ol>
           </div>
-        </div><!-- /.blog-sidebar -->
-        <!-- End of sidebar -->
-        
-        <!-- Start of footer -->
+        </div>
+        <!-- end of sidebar -->
+
+        <!-- start of footer -->
         <footer class="blog-footer">
-          <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+          <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">
+            @mdo</a>.</p>
           <p>
             <a href="#">Back to top</a>
           </p>
         </footer>
-    <!-- End of footer -->
-    
+        <!-- end of footer -->
+
         <%= render "shared/nav", location: 'bottom' %>
-    
-         <%= source_helper ("blog")%>
-     </div>
+
+        <%= source_helper("blog") %>
+      </div>
     </div>
   </body>
 </html>
