--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
 
@@ -13,23 +14,22 @@
   </head>
 
   <body>
-   <div class="site-wrapper">
-
+    <div class="site-wrapper">
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
 
-    <%= render "shared/application_nav" %>
+          <div id="background"></div>
 
-    <%= yield %>
+          <%= render "shared/application_nav" %>
 
-     <%= render "shared/application_footer" %>
-       
-    <%= source_helper("application") %>
-         </div>
+          <%= yield %>
 
+          <%= render "shared/application_footer" %>
+
+          <%= source_helper("application") %>
+
+        </div>
       </div>
-
     </div>
   </body>
 </html>
