--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,14 +27,14 @@
               poster: 'home_bg.png'
             )
             %>
-          
+
           <%= render "shared/application_nav" %>
 
           <%= yield %>
 
           <%= render "shared/application_footer" %>
-          
-          <%= render 'shared/alerts' %>
+
+          <%= alerts %>
 
           <%= source_helper("application") %>
 
