--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_for(@portfolio_item) do |f| %>
   <% if @portfolio_item.errors.any? %>
     <% @portfolio_item.errors.full_messages.each do |error| %>
-    <%= js add_gritter(error, title: "Kiersten Brickers Portfolio", sticky: false) %>    
+      <%= alert_generator error %>
+    <% end %>
   <% end %>
-<% end %>
+  
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
@@ -15,16 +16,16 @@
         <%= f.label :subtitle %>
         <%= f.text_field :subtitle, class: 'form-control' %>
       </div>
-    
+
       <div class="form-group">
         <label class="btn btn-primary">
-          Upload a main image file <%= f.file_field :main_image, style: "display:none;" %>
+          Upload a main image file <%= f.file_field :main_image, style: 'display:none;' %>
         </label>
       </div>
-      
+
       <div class="form-group">
         <label class="btn btn-primary">
-          Upload a thumb image file <%= f.file_field :thumb_image, style: "display:none;" %>
+          Upload a thumb image file <%= f.file_field :thumb_image, style: 'display:none;' %>
         </label>
       </div>
     </div>
@@ -45,10 +46,10 @@
       <%= f.fields_for :technologies do |technology_form| %>
         <%= render 'technology_fields', f: technology_form %>
       <% end %>
-    </div>
-    
-    <div>
-      <%= link_to_add_association 'Add Technology', f, :technologies %>
+
+      <div>
+        <%= link_to_add_association 'Add Technology', f, :technologies %>
+      </div>
     </div>
 
     <div class="form-group">
