--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -171,9 +171,9 @@ h6, .h6 {
 }
 
 /*
- * Custom Styles
+ * Custom styles
  */
- 
+
 .social-links li {
   font-size: 2.5em;
 }
@@ -193,9 +193,13 @@ h6, .h6 {
 
 .blogcrumb a {
   font-size: 1.25em;
-  margin: 0px 10px 0px;
+  margin: 0px 10px 0px 10px;
 }
 
 .blog-nav {
   margin-bottom: 30px;
+}
+
+.blog-sidebar-source {
+  margin-top: 20px;
 }
