--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,18 +1,22 @@
-<h1>About Me</h1>
-
-<hr>
-
-<div class="row">
-  <div class="col-md-4">
-    <%= image_tag "profile.jpg", width: 300, alt: "profile image" %>
-  </div>
-
-  <div class="col-md-8">
-    <p>I am a fresh graduate from high school and most of my highschool years have been devoted to coding, I have loved it
-    ever since I was introduced to it. It is a world of my creation, all I need are the learnable skills, a computer, 
-    and lastly an internet connecion. It is almost pure magic. My skills are conveyed in this portfolio, I hope my work
-    contains no imperfections.</p>
-
-   
+<div class="app-card-container">
+  <div class="card">
+    <h1>About Me</h1>
+    
+    <hr>
+    
+    <div class="row">
+      <div class="col-md-4">
+        <%= image_tag "profile.jpg", width: 300, alt: "profile image", class: 'profile-img' %>
+      </div>
+    
+      <div class="col-md-8">
+        <p>I am a fresh graduate from high school and most of my highschool years have been devoted to coding, I have loved it
+        ever since I was introduced to it. It is a world of my creation, all I need are the learnable skills, a computer, 
+        and lastly an internet connecion. It is almost pure magic. My skills are conveyed in this portfolio, I hope my work
+        contains no imperfections.</p>
+    
+       
+      </div>
+    </div>    
   </div>
 </div>
